# lattice-symmetries-halide

./: CMakeLists.txt  benchmark.cpp  generator.cpp  kernels.cpp  kernels.hpp  simde_kernels.cpp
test/: CMakeLists.txt  run_tests.cpp
